syntax = "proto3";

package bunsan.broker;

message Task {
    /* required */ string type = 1;
    /* required */ string package = 2;
    bytes data = 3;
}

message Status {
    int32 code = 1;
    string reason = 2;
    bytes data = 3;
}

message Result {
    enum Status {
        OK = 0;
        INVALID_PROTO = 1;
        UNKNOWN_TYPE = 2;
        PACKAGE_NOT_FOUND = 3;
        PACKAGE_BUILD_ERROR = 4;
        INVALID_PACKAGE = 5;
        EXECUTION_ERROR = 6;
    }

    Status status = 1;
    string reason = 2;
    bytes data = 3;
}
